--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FenderBender Mutual - Claims Intake</title>
+    <meta
+      name="description"
+      content="Mobile claims intake for FenderBender Mutual. AI-assisted damage triage, incident narration, and next steps."
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="FenderBender Mutual — Claim Assist" />
+    <meta
+      property="og:description"
+      content="A calm, mobile-first claim intake experience with AI-assisted summaries and next steps."
+    />
+    <meta property="og:image" content="/src/assets/fenderbender-logo.png" />
+    <meta property="og:image:alt" content="FenderBender Mutual logo" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="FenderBender Mutual — Claim Assist" />
+    <meta
+      name="twitter:description"
+      content="A calm, mobile-first claim intake experience with AI-assisted summaries and next steps."
+    />
+    <meta name="twitter:image" content="/src/assets/fenderbender-logo.png" />
   </head>
   <body>
     <div id="root"></div>
